--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Templete Literal</title>
+    <link rel="stylesheet" href="stilo.css">
 </head>
+
 <body>
     <div id="app"></div>
     
+    <script src="script.js"></script>
 </body>
 </html>
