--- a/postPets.html
+++ b/postPets.html
@@ -44,8 +44,8 @@
 
 function salvarPetsData(){
     //Obter os dados do formulário.
+    //Verificando se o Id já existe para escolher um que nao existe ainda
     var petsData = { }
-    var favFoods = []
     var Foods = []
     var tamh = window.localStorage.length
     var aux = 0
